--- a/Project3/index.html
+++ b/Project3/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset='UTF-8'>
         <title>Countryside Pizza & Grill</title>
-        <link rel='stylesheet' href="../../css/p3style.css">
+        <link rel='stylesheet' href="p3style.css">
     </head>
 
     <body>
         <h1>Countryside Pizza & Grill</h1>
 
         <figure>        
-            <img src="../../images/CSP.png" alt="CSP Logo">
+            <img src="/images/CSP.png" alt="CSP Logo">
         </figure>
 
         <h2>Your Local Pizza Dine</h2>
@@ -70,4 +70,5 @@ Margins around the table
 Chapter 19; More CSS Techniques
 
 Special properties for controlling borders and spacing between cells
+
 -->
