--- a/Project3/index.html
+++ b/Project3/index.html
@@ -10,7 +10,7 @@
         <h1>Countryside Pizza & Grill</h1>
 
         <figure>        
-            <img src="/images/CSP.png" alt="CSP Logo">
+            <img src="images/CSP.png" alt="CSP Logo">
         </figure>
 
         <h2>Your Local Pizza Dine</h2>
@@ -32,9 +32,9 @@
             <!--Table Images-->
                 <figure>
                 <tr>
-                    <td><img src='../../images/tablefood.jpg' alt='Food Img.'></td>
-                    <td><img src='../../images/restaurant.JPG' alt='Restaurant Img.'></td>
-                    <td><img src='../../images/pizza1.JPG' alt='Food Img.'></td>
+                    <td><img src='images/tablefood.jpg' alt='Food Img.'></td>
+                    <td><img src='images/restaurant.JPG' alt='Restaurant Img.'></td>
+                    <td><img src='images/pizza1.JPG' alt='Food Img.'></td>
                 </tr>
                 </figure>  
             <!--Table Data-->
@@ -72,3 +72,4 @@ Chapter 19; More CSS Techniques
 Special properties for controlling borders and spacing between cells
 
 -->
+
