--- a/Project3/about.html
+++ b/Project3/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>About Page</title>
-        <link rel='stylesheet' href="../../css/p3style.css">
+        <link rel='stylesheet' href="p3style.css">
     </head>
 
     <body>
@@ -11,7 +11,7 @@
         <h1>Countryside Pizza & Grill</h1>
 
         <figure>
-            <img src="../../images/CSP.png" alt="CSP Logo">
+            <img src="images/CSP.png" alt="CSP Logo">
         </figure>
 
         <h2>About Us</h2>
@@ -24,7 +24,7 @@
         <p class="about-page">
             
         <figure>
-            <img src="../../images/drink.JPG" alt="Drink Img.">
+            <img src="images/drink.JPG" alt="Drink Img.">
         </figure>
 
         <p class="about-page">
@@ -45,4 +45,5 @@
 
         <a href="main.html">Home</a>
     </body>
+
 </html>
