--- a/Project3/location.html
+++ b/Project3/location.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset='UTF-8'>
         <title>Location & Hours</title>
-        <link rel='stylesheet' href="../../css/p3style.css">
+        <link rel='stylesheet' href="p3style.css">
     </head>
 
     <body>
         <a href="main.html">Home</a>
         <h1>Countryside Pizza & Grill</h1>
-        <img src="../../images/CSP.png" alt="CSP Logo">
+        <img src="images/CSP.png" alt="CSP Logo">
 
         <p class="Hours-title">Location and Contact
             <p class="Hours-c">
@@ -26,4 +26,5 @@
 
         <a href="main.html">Home</a>
     </body>
+
 </html
