--- a/Project3/about.html
+++ b/Project3/about.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <h1>Countryside Pizza & Grill</h1>
 
         <figure>
@@ -43,7 +43,8 @@
             The location and hours are posted online <a href="location.html">Here</a>. You will also find the number to call for takeout orders!
         </p>
 
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
     </body>
 
 </html>
+
