--- a/Project3/location.html
+++ b/Project3/location.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <h1>Countryside Pizza & Grill</h1>
         <img src="images/CSP.png" alt="CSP Logo">
 
@@ -24,7 +24,8 @@
             </p>
         </p>
 
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
     </body>
 
 </html
+
