--- a/Project3/menu.html
+++ b/Project3/menu.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <h1>Countryside Pizza & Grill</h1>
 
         <figure> 
@@ -286,8 +286,9 @@
                 <!--End of Pizza Table-->
             </tfoot>
         </table>
-    <a href="main.html">Home</a>
+    <a href="index.html">Home</a>
     </body>
 
 
 </html>
+
