--- a/Project2/recipes/tapenade.html
+++ b/Project2/recipes/tapenade.html
@@ -72,6 +72,6 @@
     </ol>
 
     <p><a href="../index.html">[Back to the home page]</a></p>
-    <p><a href="pasta/linguine.html">[Try the Linguine with Clam Sauce]</a></p>
+    <p><a href="pastas/linguine.html">[Try the Linguine with Clam Sauce]</a></p>
   </body>
 </html>
