--- a/Project5/page2.html
+++ b/Project5/page2.html
@@ -10,7 +10,7 @@
     <div id=#layout>
     <header>
         <nav>
-            <a href="page1.html">BACK</a>
+            <a href="index.html">BACK</a>
         </nav>
     </header>
         <h1>Mac Miller Albums</h1>
@@ -48,4 +48,5 @@
         </div>
     </div>
     </body>
+
 </html>
